# upartsfs

./: .gitignore  .gitmodules  COPYING  INSTALL.md  Makefile.am  README.md  bootstrap.sh  configure.ac  ezbuild.sh
src/: Makefile  Makefile.am  _Makefile  _reset_test.sh  _test_lib.sh  fusexmp.c  loggedfs.c  test_glib.c  test_mount_fusexmp.sh  test_mount_upartsfs.sh  test_readdir.sh  test_readdir_upartsfs.sh  test_valgrind_mount_fusexmp.sh  test_valgrind_mount_upartsfs.sh  test_valgrind_readdir_fusexmp.sh  test_valgrind_readdir_upartsfs.sh  unconfig.h  upartsfs.c  upartsfs.h
tests/: Makefile.am  _test_lib.sh.in  _test_open_upartsfs.sh  test_mount_fusexmp.sh  test_mount_upartsfs.sh  test_open.c  test_open_fusexmp.sh  test_open_upartsfs.sh  test_open_upartsfs_r.sh  test_open_upartsfs_rw.sh  test_open_upartsfs_w.sh  test_read.sh  test_readdir_upartsfs.sh
